feat: Implement asynchronous ingestion with a Celery worker and refactor text chunking using a recursive strategy.

--- a/pyproject.toml
+++ b/pyproject.toml
@@ -12,8 +12,7 @@ dependencies = [
     "python-multipart",
     "pypdf",
     "striprtf",
-    "sentence_transformers",
     "chromadb",
     "openai",
-    "openai.error",
+    "flashrank>=0.2.10",
 ]
