--- a/.gitignore
+++ b/.gitignore
@@ -4,11 +4,13 @@ __pycache__/
 *.so
 *.pyd
 *.pyo
-
+*.json
+*.lock
 # Virtual environments
 .venv/
 venv/
 env/
+.cache
 
 # Environment + secrets
 .env
